# zscheduler

./: .gitignore  pyproject.toml
zscheduler_app/: main.py
zscheduler_app/scheduler/: scheduler.py
zscheduler_app/ui/: main_window.py
